--- a/.github/workflows/k8s-patch-os-jobs.yml
+++ b/.github/workflows/k8s-patch-os-jobs.yml
@@ -30,6 +30,9 @@ env:
 jobs:
   create-k8s-on-ec2:
     runs-on: ubuntu-latest
+    concurrency:
+      group: k8s-patch-os
+      cancel-in-progress: false
     steps:
       - name: Generate Testing ID
         run: |
@@ -132,7 +135,7 @@ jobs:
         run: |         
           STORAGE_SECRET_KEYS=(
             "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-master-node-endpoint-temporary-storage"
-            "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-ssh-key-storage"
+            "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-ssh-key-temporary-storage"
           )
           
           CURRENT_SECRET_KEYS=(
@@ -142,7 +145,10 @@ jobs:
           
           endpoint_secret=$(aws secretsmanager get-secret-value --secret-id "${CURRENT_SECRET_KEYS[0]}" --query SecretString --output text)
           ssh_secret=$(aws secretsmanager get-secret-value --secret-id "${CURRENT_SECRET_KEYS[1]}" --query SecretString --output text)
-
+          
+          echo $endpoint_secret
+          echo $ssh_secret
+          
           aws secretsmanager update-secret --secret-id "${STORAGE_SECRET_KEYS[0]}" --secret-string $endpoint_secret
           aws secretsmanager update-secret --secret-id "${STORAGE_SECRET_KEYS[1]}" --secret-string $ssh_secret
 
