--- a/.github/workflows/k8s-patch-os-jobs.yml
+++ b/.github/workflows/k8s-patch-os-jobs.yml
@@ -107,7 +107,7 @@ jobs:
     with:
       aws-region: 'us-east-1'
       caller-workflow-name: 'k8s-os-patching'
-      caller-repository: ${{ env.REPO }}
+      caller-repository: ${{ inputs.repo }}
 
   run-python-k8s-test:
     if: ${{ inputs.LANGUAGE == 'python' }}
@@ -117,7 +117,7 @@ jobs:
     with:
       aws-region: 'us-east-1'
       caller-workflow-name: 'k8s-os-patching'
-      caller-repository: ${{ env.REPO }}
+      caller-repository: ${{ inputs.repo }}
 
   update-secrets:
     needs: [ run-java-k8s-test, run-python-k8s-test ]
