--- a/.github/workflows/k8s-patch-os-jobs.yml
+++ b/.github/workflows/k8s-patch-os-jobs.yml
@@ -146,7 +146,7 @@ jobs:
           ssh_secret=$(aws secretsmanager get-secret-value --secret-id "${CURRENT_SECRET_KEYS[1]}" --query SecretString --output text)
           
           echo $endpoint_secret
-          echo $ssh_secret
+          echo "$ssh_secret"
           
           aws secretsmanager update-secret --secret-id "${STORAGE_SECRET_KEYS[0]}" --secret-string $endpoint_secret
           aws secretsmanager update-secret --secret-id "${STORAGE_SECRET_KEYS[1]}" --secret-string $ssh_secret
