--- a/.github/workflows/k8s-patch-os-jobs.yml
+++ b/.github/workflows/k8s-patch-os-jobs.yml
@@ -100,7 +100,7 @@ jobs:
           aws secretsmanager update-secret --secret-id "${SECRET_NAMES[1]}" --secret-string "$private_key_content"
   
   run-java-k8s-test:
-    if: ${{ inputs.LANGUAGE == 'java' || inputs.LANGUAGE == 'all' }}
+    if: ${{ inputs.LANGUAGE == 'java' }}
     needs: create-k8s-on-ec2
     uses: ./.github/workflows/java-k8s-e2e-test.yml
     secrets: inherit
@@ -149,7 +149,7 @@ jobs:
           echo "$ssh_secret"
           
           aws secretsmanager update-secret --secret-id "${STORAGE_SECRET_KEYS[0]}" --secret-string $endpoint_secret
-          aws secretsmanager update-secret --secret-id "${STORAGE_SECRET_KEYS[1]}" --secret-string $ssh_secret
+          aws secretsmanager update-secret --secret-id "${STORAGE_SECRET_KEYS[1]}" --secret-string "$ssh_secret"
 
       - name: Replace current endpoint and ssh key with the newly created ones
         run: |
