--- a/.github/workflows/k8s-outdated-cleanup.yml
+++ b/.github/workflows/k8s-outdated-cleanup.yml
@@ -6,7 +6,7 @@ on:
   schedule:
     - cron: '0 0 7 * *' # run the workflow beginning of every month
   workflow_dispatch: # be able to run the workflow on demand
-#  push:
+  push:
 
 permissions:
   id-token: write
@@ -18,15 +18,14 @@ jobs:
       fail-fast: false
       matrix:
         instance: [
-#          { repo: 'amazon-cloudwatch-agent-operator', ec2_name: 'cw-agent-operator-release', language: 'java' },
-#                    { repo: 'amazon-cloudwatch-agent-operator', ec2_name: 'cw-agent-operator-release', language: 'python' },
-#                    { repo: 'amazon-cloudwatch-agent', ec2_name: 'cw-agent-release', language: 'java' },
-#                    { repo: 'amazon-cloudwatch-agent', ec2_name: 'cw-agent-release', language: 'python' },
-#                    { repo: 'aws-otel-python-instrumentation', ec2_name: 'adot-python-release', language: 'python' },
-#                    { repo: 'aws-otel-java-instrumentation', ec2_name: 'adot-java-release', language: 'java' },
-#                    { repo: 'aws-application-signals-test-framework', ec2_name: 'python-canary', language: 'python' },
-                    { repo: 'aws-application-signals-test-framework', ec2_name: 'java-canary', language: 'java' } ]
-#                    { repo: 'aws-application-signals-test-framework', ec2_name: 'e2e-playground', language: 'all' } ]
+          { repo: 'amazon-cloudwatch-agent-operator', ec2_name: 'cw-agent-operator-release', language: 'java' },
+          { repo: 'amazon-cloudwatch-agent-operator', ec2_name: 'cw-agent-operator-release', language: 'python' },
+          { repo: 'amazon-cloudwatch-agent', ec2_name: 'cw-agent-release', language: 'java' },
+          { repo: 'amazon-cloudwatch-agent', ec2_name: 'cw-agent-release', language: 'python' },
+          { repo: 'aws-otel-python-instrumentation', ec2_name: 'adot-python-release', language: 'python' },
+          { repo: 'aws-otel-java-instrumentation', ec2_name: 'adot-java-release', language: 'java' },
+          { repo: 'aws-application-signals-test-framework', ec2_name: 'python-canary', language: 'python' },
+          { repo: 'aws-application-signals-test-framework', ec2_name: 'java-canary', language: 'java' } ]
     runs-on: ubuntu
     steps:
       - name: Configure AWS Credentials
@@ -35,7 +34,7 @@ jobs:
           role-to-assume: arn:aws:iam::${{ env.E2E_TEST_ACCOUNT_ID }}:role/${{ env.E2E_TEST_ROLE_NAME }}
           aws-region: us-east-1
 
-      - name: Copy the current endpoint and ssh key to storage
+      - name: Delete Key Pair and EC2 Instance
         run: |
           STORAGE_SECRET_KEYS=(
             "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-master-node-endpoint-temporary-storage"
@@ -49,3 +48,22 @@ jobs:
             --output text)
 
           prev_testing_id=$(echo $instance_name | awk -F'-' '{print $(NF-1)"-"$NF}')
+          
+          aws ec2 delete-key-pair --key-name "k8s-on-ec2-${{ matrix.instance.ec2_name }}-${{ matrix.instance.language }}-key-pair-$prev_testing_id"
+          
+          main_instance_name=k8s-on-ec2-${{ matrix.instance.ec2_name }}-${{ matrix.instance.language }}-master-$prev_testing_id
+          worker_instance_name=k8s-on-ec2-${{ matrix.instance.ec2_name }}-${{ matrix.instance.language }}-worker-$prev_testing_id
+
+          main_instance_id=$(aws ec2 describe-instances \
+          --filters "Name=tag:Name,Values=$main_instance_name" \
+          --query "Reservations[*].Instances[*].InstanceId" \
+          --output text)
+          
+          worker_instance_id=$(aws ec2 describe-instances \
+          --filters "Name=tag:Name,Values=$worker_instance_name" \
+          --query "Reservations[*].Instances[*].InstanceId" \
+          --output text)
+          
+          aws ec2 terminate-instances --instance-ids $main_instance_id
+          aws ec2 terminate-instances --instance-ids $worker_instance_id
+
