--- a/.github/workflows/k8s-patch-os-matrix.yml
+++ b/.github/workflows/k8s-patch-os-matrix.yml
@@ -3,10 +3,10 @@
 name: Update K8s EC2 Instance
 
 on:
-#  schedule:
-#    - cron: '0 0 1 * *' # run the workflow beginning of every month
-#  workflow_dispatch: # be able to run the workflow on demand
-  push:
+  schedule:
+    - cron: '0 0 1 * *' # run the workflow beginning of every month
+  workflow_dispatch: # be able to run the workflow on demand
+#  push:
 
 permissions:
   id-token: write
