--- a/.github/workflows/k8s-patch-os-matrix.yml
+++ b/.github/workflows/k8s-patch-os-matrix.yml
@@ -6,7 +6,7 @@ on:
   schedule:
     - cron: '0 0 1 * *' # run the workflow beginning of every month
   workflow_dispatch: # be able to run the workflow on demand
-  push:
+#  push:
 
 permissions:
   id-token: write
