--- a/.github/workflows/resource-cleanup.yml
+++ b/.github/workflows/resource-cleanup.yml
@@ -4,9 +4,9 @@
 name: AWS Resource Cleaner
 
 on:
-  schedule:
-    - cron: '0 18 * * *' # scheduled to run at 18:00 UTC every day
-  workflow_dispatch: # be able to run on demand
+#  schedule:
+#    - cron: '0 18 * * *' # scheduled to run at 18:00 UTC every day
+#  workflow_dispatch: # be able to run on demand
   push:
 
 jobs:
