--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,9 +4,7 @@
 name: AWS Resource Cleaner
 
 on:
-  schedule:
-    - cron: '0 18 * * *' # scheduled to run at 18:00 UTC every day
-  workflow_dispatch: # be able to run on demand
+  push:
 
 jobs:
   cleanup-ec2-instances:
