--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,19 +69,17 @@ jobs:
     steps:
       - name: Check if today is the first day of the month
         id: check_day
-        run: echo "date=$(( $(date +%d) == 01 ))" >> $GITHUB_OUTPUT
-
-      - name: Run only on the first day of the month
-        if: steps.check_day.outputs.first_day == '1'
-        run: echo "It's the first day of the month!"
+        run: echo "first_day=$(( $(date +%d) == 01 ))" >> $GITHUB_OUTPUT
 
       - name: Configure AWS Credentials
+        if: steps.check_day.outputs.first_day == '1'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ env.E2E_TEST_ACCOUNT_ID }}:role/${{ env.E2E_TEST_ROLE_NAME }}
           aws-region: us-east-1
 
       - name: Delete Key Pair and EC2 Instance
+        if: steps.check_day.outputs.first_day == '1'
         run: |
           STORAGE_SECRET_KEYS=(
             "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-master-node-endpoint-temporary-storage"
@@ -118,4 +116,4 @@ jobs:
     with:
       aws-region: 'us-east-1'
       caller-workflow-name: 'enablement-test-resource-cleanup'
-      validation-result: ${{ (needs.cleanup-ec2-instances.result == 'success' && needs.cleanup-k8s-on-ec2.result != 'failure') && 'success' || 'failure' }}
+      validation-result: ${{ (needs.cleanup-ec2-instances.result == 'success' && needs.cleanup-k8s-on-ec2.result == 'success') && 'success' || 'failure' }}
