--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,17 +69,17 @@ jobs:
     steps:
       - name: Check if today is the first day of the month
         id: check_day
-        run: echo "first_day=$(( $(date +%d) == 01 ))" >> $GITHUB_OUTPUT
+        run: echo "day=$(( $(date +%d) == 01 ))" >> $GITHUB_OUTPUT
 
       - name: Configure AWS Credentials
-        if: steps.check_day.outputs.first_day == '1'
+        if: steps.check_day.outputs.day == 29'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ env.E2E_TEST_ACCOUNT_ID }}:role/${{ env.E2E_TEST_ROLE_NAME }}
           aws-region: us-east-1
 
       - name: Delete Key Pair and EC2 Instance
-        if: steps.check_day.outputs.first_day == '1'
+        if: steps.check_day.outputs.day == '29'
         run: |
           STORAGE_SECRET_KEYS=(
             "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-master-node-endpoint-temporary-storage"
