--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,7 +72,7 @@ jobs:
         run: echo "day=$(( $(date +%d) == 01 ))" >> $GITHUB_OUTPUT
 
       - name: Configure AWS Credentials
-        if: steps.check_day.outputs.day == 29'
+        if: steps.check_day.outputs.day == '29'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ env.E2E_TEST_ACCOUNT_ID }}:role/${{ env.E2E_TEST_ROLE_NAME }}
