--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -70,18 +70,18 @@ jobs:
       - name: Check if today is the first day of the month
         id: check_day
         run: |
-          echo $(( $(date +%d) == 30 ))
-          echo "day=$(( $(date +%d) == 30 ))" >> $GITHUB_OUTPUT
+          echo $(( $(date +%d) == 29 ))
+          echo "day=$(( $(date +%d) == 29 ))" >> $GITHUB_OUTPUT
 
       - name: Configure AWS Credentials
-        if: steps.check_day.outputs.day
+        if: steps.check_day.outputs.day == '1'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ env.E2E_TEST_ACCOUNT_ID }}:role/${{ env.E2E_TEST_ROLE_NAME }}
           aws-region: us-east-1
 
       - name: Delete Key Pair and EC2 Instance
-        if: steps.check_day.outputs.day
+        if: steps.check_day.outputs.day == '1'
         run: |
           STORAGE_SECRET_KEYS=(
             "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-master-node-endpoint-temporary-storage"
