--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -71,17 +71,17 @@ jobs:
         id: check_day
         run: |
           echo $(( $(date +%d) == 29 ))
-          echo "day=$(( $(date +%d) == 29 ))" >> $GITHUB_OUTPUT
+          echo "is_first_day=$(( $(date +%d) == 29 ))" >> $GITHUB_OUTPUT
 
       - name: Configure AWS Credentials
-        if: steps.check_day.outputs.day == '1'
+        if: steps.check_day.outputs.is_first_day == '0'
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ env.E2E_TEST_ACCOUNT_ID }}:role/${{ env.E2E_TEST_ROLE_NAME }}
           aws-region: us-east-1
 
       - name: Delete Key Pair and EC2 Instance
-        if: steps.check_day.outputs.day == '1'
+        if: steps.check_day.outputs.is_first_day == '0'
         run: |
           STORAGE_SECRET_KEYS=(
             "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-master-node-endpoint-temporary-storage"
